# Comfyui-Nodes-Stats

./: .gitignore  README.md  __init__.py  mapper.py  node_introspect.py  pyproject.toml  tracker.py
docs/plans/: 2026-04-08-model-tracking-design.md  2026-04-08-model-tracking.md  2026-06-21-mirror-search-design.md  2026-06-21-mirror-search.md  2026-06-21-trial-enable-design.md  2026-06-21-trial-enable.md  2026-06-22-trial-install-design.md  2026-06-22-trial-install.md
js/: nodes_stats.js
tests/: conftest.py  test_classify.py  test_model_mapper.py  test_model_tracker.py  test_node_introspect.py  test_trials.py
tools/: diagnose_model_scan.py
