[project]
name = "comfyui-nodes-stats"
description = "Track usage statistics for all ComfyUI nodes and packages"
version = "1.0.0"
license = "MIT"

[project.urls]
Repository = "https://github.com/ethanfel/Comfyui-Nodes-Stats"

[tool.comfy]
PublisherId = "ethanfel"
DisplayName = "Node Usage Stats"
Icon = ""
